--- a/environment.yml
+++ b/environment.yml
@@ -21,6 +21,10 @@ dependencies:
   - geodatasets
   - adlfs
   - easysnowdata
+  - flox
+  - geopandas
+  - shapely
+  - pyproj
   - pip
 
   - pip:
