github actions stuff

--- a/.github/workflows/process_tile_batch.yml
+++ b/.github/workflows/process_tile_batch.yml
@@ -48,8 +48,8 @@ jobs:
         miniforge-variant: Miniforge3
         channels: conda-forge,defaults
         channel-priority: true
-        activate-environment: global_snowmelt_runoff_onset
-        environment-file: environment.yml
+        activate-environment: global_snowmelt_runoff_onset_actions
+        environment-file: environment_github_actions.yml
         
     - name: Get tiles for batch processing
       id: get-tiles
@@ -91,8 +91,8 @@ jobs:
         miniforge-variant: Miniforge3
         channels: conda-forge,defaults
         channel-priority: true
-        activate-environment: global_snowmelt_runoff_onset
-        environment-file: environment.yml
+        activate-environment: global_snowmelt_runoff_onset_actions
+        environment-file: environment_github_actions.yml
         
     - name: Process tile
       shell: bash -l {0}
@@ -104,12 +104,13 @@ jobs:
           
     - name: Create failure record if processing crashed
       if: always()
+      shell: bash -l {0}
       run: |
         CONFIG_FILE="${{ github.event.inputs.config_file }}"
         VERSION=$(echo "$CONFIG_FILE" | sed 's/.*v\([0-9]*\).*/v\1/')
         
         if [ ! -f "processing/tile_data/github_workflow_results/tile_${{ matrix.tile.row }}_${{ matrix.tile.col }}_${VERSION}.csv" ]; then
-          python3 -c "
+          python -c "
         import pandas as pd
         from pathlib import Path
         
