--- a/.github/workflows/process_single_tile.yml
+++ b/.github/workflows/process_single_tile.yml
@@ -40,8 +40,8 @@ jobs:
         miniforge-variant: Miniforge3
         channels: conda-forge,defaults
         channel-priority: true
-        activate-environment: global_snowmelt_runoff_onset
-        environment-file: environment.yml
+        activate-environment: global_snowmelt_runoff_onset_actions
+        environment-file: environment_github_actions.yml
         
     - name: Process tile
       shell: bash -l {0}
@@ -53,9 +53,10 @@ jobs:
           
     - name: Create failure record if processing crashed
       if: always()
+      shell: bash -l {0}
       run: |
         if [ ! -f "processing/tile_data/github_workflow_results/tile_${{ github.event.inputs.tile_row }}_${{ github.event.inputs.tile_col }}_v*.csv" ]; then
-          python3 -c "
+          python -c "
         import pandas as pd
         from pathlib import Path
         
