--- a/.github/workflows/sync_tile_results.yml
+++ b/.github/workflows/sync_tile_results.yml
@@ -33,8 +33,8 @@ jobs:
         miniforge-variant: Miniforge3
         channels: conda-forge,defaults
         channel-priority: true
-        activate-environment: global_snowmelt_runoff_onset
-        environment-file: environment.yml
+        activate-environment: global_snowmelt_runoff_onset_actions
+        environment-file: environment_github_actions.yml
         
     - name: Sync tile results
       shell: bash -l {0}
