fix git diff issue

--- a/.github/workflows/process_single_tile.yml
+++ b/.github/workflows/process_single_tile.yml
@@ -96,7 +96,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         
-        if ! git diff --quiet processing/tile_data/; then
+        if [[ -n "$(git status --porcelain processing/tile_data/)" ]]; then
           git add processing/tile_data/
           
           for i in {1..5}; do
