--- a/.github/workflows/process_single_tile.yml
+++ b/.github/workflows/process_single_tile.yml
@@ -41,15 +41,15 @@ jobs:
         channels: conda-forge,defaults
         channel-priority: true
         activate-environment: global_snowmelt_runoff_onset_actions
-        environment-file: environment_github_actions.yml
+        environment-file: .github/workflows/environment_github_actions.yml
         
     - name: Process tile
       shell: bash -l {0}
       run: |
-        python scripts/process_single_tile.py \
+        python processing/scripts/process_single_tile.py \
           --tile-row ${{ github.event.inputs.tile_row }} \
           --tile-col ${{ github.event.inputs.tile_col }} \
-          --config-file ${{ github.event.inputs.config_file }}
+          --config-file config/${{ github.event.inputs.config_file }}
           
     - name: Create failure record if processing crashed
       if: always()
