--- a/.github/workflows/process_single_tile.yml
+++ b/.github/workflows/process_single_tile.yml
@@ -43,6 +43,11 @@ jobs:
         activate-environment: global_snowmelt_runoff_onset_actions
         environment-file: environment_github_actions.yml
         
+    - name: Install package
+      shell: bash -l {0}
+      run: |
+        pip install -e .
+        
     - name: Process tile
       shell: bash -l {0}
       run: |
