--- a/.github/workflows/sync_tile_results.yml
+++ b/.github/workflows/sync_tile_results.yml
@@ -36,6 +36,11 @@ jobs:
         activate-environment: global_snowmelt_runoff_onset_actions
         environment-file: environment_github_actions.yml
         
+    - name: Install package
+      shell: bash -l {0}
+      run: |
+        pip install -e .
+        
     - name: Sync tile results
       shell: bash -l {0}
       run: |
